--- a/0001.md
+++ b/0001.md
@@ -1,4 +1,4 @@
-General Notes:
+# General Notes:
 
 - dZIPs do not need to follow a standard structure unless we intend to write tooling.  Pillar can develop their own dZIP standards or structured metadata.
 - dZIPs should be formally introduced via a sponsoring Pillar. Sponsorship implies that the pillar will vote for it, and ultimately upgrade software if needed. A change that cannot find a sponsor is either underdeveloped or dead on arrival.
