--- a/0001.md
+++ b/0001.md
@@ -9,3 +9,5 @@
 - Pillars should consider mirring their own respoitories on central services to offsite locations for resiliance.
 - The dZIP Pointer Service will maintain an official pointer repo, verify pillar ownership of the dZIP repos (through signature file), and add as submodule. The only subjective decision making needed is for abuse from pillars, eg obscene content
 - Long term goal is to move dZIPs on-chain
+
+Source: Source: https://github.com/orgs/Big-Inches-Club-House/discussions/4
