--- a/0001.md
+++ b/0001.md
@@ -1,13 +1,13 @@
 # General Notes:
 
-- dZIPs do not need to follow a standard structure unless we intend to write tooling.  Pillar can develop their own dZIP standards or structured metadata.
-- dZIPs should be formally introduced via a sponsoring Pillar. Sponsorship implies that the pillar will vote for it, and ultimately upgrade software if needed. A change that cannot find a sponsor is either underdeveloped or dead on arrival.
-- Changes that no pillar cares about are arguably out of scope of the dZIP framework.
-- Pillars can introduce/sponsor dZIPs by hosting it in their own git repo. They can verify ownership by including a signature in the repo. 
-- dZIPs should follow a sequential numbering scheme: dZIP:[Pillar Name]-[Number]
+- ZIPs do not need to follow a standard structure unless we intend to write tooling.  Pillar can develop their own ZIP standards or structured metadata.
+- ZIPs should be formally introduced via a sponsoring Pillar. Sponsorship implies that the pillar will vote for it, and ultimately upgrade software if needed. A change that cannot find a sponsor is either underdeveloped or dead on arrival.
+- Changes that no pillar cares about are arguably out of scope of the ZIP framework.
+- Pillars can introduce/sponsor ZIPs by hosting it in their own git repo. They can verify ownership by including a signature in the repo. 
+- ZIPs should follow a sequential numbering scheme: ZIP:[Pillar Name]-[Number]
 - Pillars and supporters can mirror the repo for data redundancy, ideally on other platforms
 - Pillars should consider mirring their own respoitories on central services to offsite locations for resiliance.
-- The dZIP Pointer Service will maintain an official pointer repo, verify pillar ownership of the dZIP repos (through signature file), and add as submodule. The only subjective decision making needed is for abuse from pillars, eg obscene content
-- Long term goal is to move dZIPs on-chain
+- The ZIP Pointer Service will maintain an official pointer repo, verify pillar ownership of the ZIP repos (through signature file), and add as submodule. The only subjective decision making needed is for abuse from pillars, eg obscene content
+- Long term goal is to move ZIPs on-chain
 
 Source: https://github.com/orgs/Big-Inches-Club-House/discussions/4
