--- a/0001.md
+++ b/0001.md
@@ -143,8 +143,7 @@ Based on the founding developers' indication that network changes could be voted
 
 
 # ZIP Process
-![image|690x234](upload://shmdXU3hrmxNsDOV9UvyjJl0PBY.png)
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-1.png?raw=true)
 
 ## Stage 1 - ZIP IDEA
 ![image|690x389](upload://iea6FTNgpkvI9nHD1k2dcOn7AX.png)
