--- a/0001.md
+++ b/0001.md
@@ -146,9 +146,7 @@ Based on the founding developers' indication that network changes could be voted
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-1.png?raw=true)
 
 ## Stage 1 - ZIP IDEA
-![image|690x389](upload://iea6FTNgpkvI9nHD1k2dcOn7AX.png)
-
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-2.png?raw=true)
 
 |||
 | --- | --- |
@@ -171,8 +169,7 @@ The ZIP author(s) should first attempt to ascertain whether the idea is ZIP-able
 Vetting an idea publicly before going as far as writing a detailed ZIP specification is meant to save both the potential author and the wider community time. Asking the Zenon community first if an idea is original helps prevent too much time from being spent on something that is guaranteed to be rejected.
 
 ## Stage 2 - PUBLIC DEBATE & REVISION
-![image|690x389](upload://t386jE5czNak5PgCczNIUCKYURz.png)
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-3.png?raw=true)
 
 |||
 | --- | --- |
@@ -200,9 +197,7 @@ For a ZIP to be accepted it must meet certain minimum criteria:
 Before drafting an official ZIP, the author will have to identify a Pillar willing to sponsor the ZIP and add it to their ZIP repository for indexing by the Community Pointer repo.
 
 ## Stage 3 - OFFICIAL ZIP PROPOSAL
-![image|690x389](upload://mCIpMRiiWPqzFVolKnvDYhPK6tm.png)
-
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-4.png?raw=true)
 
 |||
 | --- | --- |
@@ -241,7 +236,7 @@ The community pointer repo points to a ZIP folder hosted by each sponsoring Pill
 
 Each sponsoring pillar maintains its own ZIP numbering while adhering to established formatting standards. The editor repo maintains standard format templates and best practice recommendations for sponsoring Pillars to use.
 
-![image|633x499](upload://kNqswfRUHsC98dqSfROowpZdTzp.png)
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-5.png?raw=true)
 
 Note that individual Pillars can also choose to act as a pointer service by adding the repos of other Pillars as submodules to their own.
 
@@ -271,11 +266,11 @@ There are different ZIP statuses.
 
 For Informational ZIPs and Implementation ZIPs which only require **implicit consensus**:
 
-![image|690x429, 75%](upload://uq9juR9FhdnGlrKjorJ3yq2JZBN.png)
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-6.png?raw=true)
 
 For Sporks that require **explicit consensus** by Pillars to be accepted and activated:
 
-![image|690x429, 75%](upload://gcaZ97T9yJuyfXl66i6CsQI3o8P.png)
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-7.png?raw=true)
 
 |Status|Description|
 | --- | --- |
@@ -314,8 +309,7 @@ Some Informational ZIPs may also have a status of "Active" if they are never mea
 -----
 
 ## Stage 4 - SPORK CREATION
-![image|690x389](upload://nD4SnynUIvLey0E9DbeP4XsXHQb.png)
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-8.png?raw=true)
 
 |||
 | --- | --- |
@@ -346,7 +340,7 @@ If the Acceptance vote fails due to a timeout or too many negative Pillar votes,
 If the Acceptance vote passes, it is a signal to the community developers that Pillars support the initiative and they will run the code after proper vetting. Developers should feel confident in spending time writing code to support the ZIP at this stage. 
 
 ## Stage 5 - IMPLEMENTATION DISTRIBUTION
-![image|690x389](upload://4mmKqlzj40gcl9a56aYhMImpRro.png)
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-9.png?raw=true)
 
 |||
 | --- | --- |
@@ -369,7 +363,7 @@ Example: Spork Object for a Hard Fork would contain the following conditional ac
 Anyone can also merge in the changes into their repo copies and build themselves. People can verify if it’s the same binary through hashes.
 
 ## Stage 6 - COMMUNITY AUDIT
-![image|690x389](upload://cxVtlOliZgte2yxWvhjrUwWraE7.png)
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-10.png?raw=true)
 
 |||
 | --- | --- |
@@ -383,8 +377,7 @@ Once the Sponsors announce the publication of the Final ZIP implementation they 
 Community members may comment on the implementation or directly push changes via pull request to the sponsoring Pillar's ZIP repo. Once the code is complete and vetted by a process similar to the [Bitcoin Contribution Criteria](https://github.com/bitcoin/bitcoin/blob/master/CONTRIBUTING.md), the ZIP can be marked "Final".
 
 ## Stage 7 - PILLARS UPGRADE NODES & VOTE
-![image|690x389](upload://m1lzuhfGVymWIsmOjzwmiylmV6u.png)
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-11.png?raw=true)
 
 |||
 | --- | --- |
@@ -398,8 +391,7 @@ The ZIP Sponsors now submit an activation request for the proposed Spork in S Y 
 What happens if the Spork fails to activate in time? ZIP Sponsors will have to assess the reason for it and either extend the activation timeline or revise the ZIP if needed. 
 
 ## Stage 8 - SPORK ACTIVATION
-![image|690x389](upload://2FafiYsF8vvT5cisTna6UmvGSHH.png)
-
+![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-12.png?raw=true)
 
 |||
 | --- | --- |
