Correct Table Heading

--- a/0001.md
+++ b/0001.md
@@ -148,8 +148,8 @@ Based on the founding developers' indication that network changes could be voted
 ## Stage 1 - ZIP IDEA
 ![alt text](https://github.com/deeZNNutz-com/ZIP.deeZNNutz/blob/main/zip-0001/zip-0001-2.png?raw=true)
 
-| Command | Description |
-| --- | --- |
+| Step | Description |
+| :--- | :--- |
 |**Stage Content**|Initial ZIP Proposal & Specification|
 |**Exit Criteria**|ZIP proposal including arguments outlining feasibility and logically explaining why it results in an objective improvement of Zenon NoM is published for community discussion.|
 
